--- a/package.json
+++ b/package.json
@@ -8,9 +8,7 @@
     "build": "astro build",
     "preview": "astro preview"
   },
-  "engines": {
-    "node": ">=18"
-  },
+  "engines": { "node": ">=18" },
   "dependencies": {
     "astro": "^5.0.0",
     "@astrojs/vercel": "latest",
