--- a/package.json
+++ b/package.json
@@ -8,11 +8,17 @@
     "build": "astro build",
     "preview": "astro preview"
   },
-  "engines": { "node": ">=18" },
+  "engines": {
+    "node": ">=18 <23"
+  },
   "dependencies": {
     "astro": "^5.0.0",
     "@astrojs/vercel": "latest",
+    "@astrojs/tailwind": "latest",
     "@keystatic/core": "latest",
-    "@keystatic/astro": "latest"
+    "@keystatic/astro": "latest",
+    "tailwindcss": "^3.4.10",
+    "postcss": "^8.4.41",
+    "autoprefixer": "^10.4.20"
   }
 }
